return ids instead of dtos for discussion, filtering
